--- a/style.css
+++ b/style.css
@@ -5,12 +5,18 @@
     padding: 0;
     font-family: 'Times New Roman', 'Times New Roman', Times, serif;
   }
+
+  html, body {
+    overflow-x: hidden !important; 
+    width: 100% !important;
+    max-width: 100vw;
+  }
   
   body {
     background-size: cover; /* or 'contain' if you want to see the whole design */
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #F9F1E5;
+    background-color: #f7e5e4;
     color: #333;
   }
   
@@ -24,6 +30,12 @@
   .logo-container {
     display: flex;
     align-items: center;
+  }
+
+  .logo {
+    height: 100px;
+    width: auto;
+    margin-right: 10px;
   }
   
   nav {
@@ -49,12 +61,6 @@
   .nav-links a:hover {
     color: #999;
   }
-
-  .logo {
-    height: 100px;
-    width: auto;
-    margin-right: 10px;
-  }
   
   .brand-name {
     font-size: 30px;
@@ -63,9 +69,10 @@
     text-decoration: none;
   }
   
+  
   /* hero section */
   .hero {
-    height: 80vh;
+    height: 70vh;
     background: url('images/floral\ background.png') no-repeat center/cover;
     display: flex;
     justify-content: center;
@@ -94,24 +101,26 @@
   }
   
   /* product grid */
-  
   .product-grid {
+    max-width: 100vw;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
-    padding: 40px;
+    z-index: 1;
+    margin: 0 auto;
+    overflow: hidden;
   }
   
   .product img {
     width: 100%;
-    height: auto;
+    height: 200px;
     transition: transform 0.1s ease;
     object-fit: cover;
   }
   
   .product h2 {
     font-size: 1.2rem;
-    margin-top: 10px;
+    margin-top: 5px;
   }
   
   .product p {
@@ -125,7 +134,7 @@
   footer {
     padding: 20px;
     text-align: center;
-    background-color: #f8f8f8;
+    background-color: #f9f1e5;
     color: #666;
   }
 
@@ -134,7 +143,7 @@
   }
 
   /* about */
-  .about {
+  .other-hero {
     height: 40vh;
     background: url('images/floral\ background.png') no-repeat center/cover;
     display: flex;
@@ -155,9 +164,10 @@
     text-align: center;
     flex-direction: column;
     color: #3f1616;
+    padding: 15px;
   }
 
-  /* product pages */
+  /* individual product pages */
   .product-page {
     display: flex;
     margin: 20px;
@@ -167,14 +177,9 @@
     padding: 20px;
   }
 
-  .product-images {
-    flex: 1;
-    margin-right: 20px;
-    min-width: 300px;
-  }
-
   .product-details {
     flex: 1;
+    padding-left: 10px;
   }
 
   .product-details h1 {
@@ -193,7 +198,7 @@
     margin-bottom: 10px;
   }
 
-  /* slideshow container */
+  /* slideshow container for individual product pages*/
   .slideshow-container {
     position: relative;
     max-width: 600px;
@@ -278,70 +283,198 @@
   }
 
   /* product slideshow on homepage */
-  /*
-  .product-slideshow {
+  .product-slideshow-container {
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-  }
-  
-  .slide {
-    flex: 0 0 auto;
-    width: 80%;
-    margin-right: 20px;
-    scroll-snap-align: start;
-    position: relative;
-  }
-  
-  .product-info {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    background-color: rgba(255, 255, 255, 0.8);
+    -webkit-overflow-scrolling: touch;
+    gap: 5px;
     padding: 10px;
+    max-width: 100%;
+    flex-wrap: nowrap;
+  }
+
+  .product-slide {
+    flex: 0 0 80%;
+    scroll-snap-align: center;
+    text-align: center;
+    border-radius: 8px;
+    padding: 7px;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    max-width: 250px;
+    margin: 10px;
+  }
+
+  .product-slide img {
+    width: 100%;
+    height: 290px;
+    max-width: 250px;
+    display: block;
+    object-fit: cover;
+    margin: 0 auto;
+    transition: transform 0.1s ease;
+  }
+
+  .product-info {
+    padding-top: 6px;
+  }
+
+  .product-slide a {
+    display: inline-block;
+    width: auto;
+    max-width: 250px;
+  }
+
+  .product-slideshow-container::-webkit-scrollbar {
+    height: 4px;
+    width: 20px;
+  }
+
+  .product-slideshow-container::-webkit-scrollbar-thumb {
+    background: #ccc;
     border-radius: 5px;
   }
-  
-  .product-info h3,
-  .product-info p {
-    margin: 0;
+
+  .product-slideshow-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
   }
-  */
+
+  /* hamburger icon */
+  .hamburger {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    color: #3f1616;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+  }
+
+  /* sidebar */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 10px;
+    right: -250px;
+    width: 210px;
+    height: 100%;
+    background-color: white;
+    padding-top: 60px;
+    transition: right 0.3s ease;
+    z-index: 999;
+    max-width: 100vw;
+  }
+
+  .sidebar a {
+    padding: 12px 20px;
+    display: block;
+    color: #3f1616;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  .sidebar a:hover {
+    background-color: #f7c3cf;
+  }
   
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #3f1616;
+    cursor: pointer;
+  }
 
+  .sidebar.active {
+    right: 0;
+  }
 
+  .heading-lol h2 {
+    padding-top: 20px;
+    padding-left: 20px;
+  }
   
 
 @media (max-width: 768px) {
-    .nav-links {
-        display: none;
-    }
 
-    .hero h1 {
-        font-size: 2rem;
-    }
+  .hero {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
-    .product-grid {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
+  .nav-links {
+    display: none;
+  }
+
+  .hero h1 {
+    font-size: 2rem;
+  }
+
+  .product-grid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    max-width: 100%;
+    display: grid;
+    gap: 15px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
     
-    .logo {
-        height: 40px;
-        width: 100px; /* Smaller size on smaller screens */
-    }
+  }
+  
+  .logo {
+    height: 60px;
+    width: 100px;
+    padding-right: 10px;
+  }
 
-    .product img {
-        width: 100%; /* Full width on smaller screens */
-        max-width: 150px; /* Keeps it from getting too large */
-    }
+  .brand-name {
+    display: none;
+  }
 
-    .product-page {
-        flex-direction: column;
-    }
+  .product img {
+    width: 100%;
+    max-width: 160px;
+  }
 
-    .slideshow-container {
-      max-width: 100%;
-    }
+  .product-page {
+    flex-direction: column;
+  }
+
+  .slideshow-container {
+    max-width: 100%;
+  }
+
+  .hamburger {
+    display: block;
+    position: absolute;
+  }
+
+  .about-text {
+    padding: 30px;
+  }
+
+  .other-hero h1 {
+    font-size: 2rem;
+  }
+
+  .other-hero p {
+    padding: 30px;
+  }
+
+  .product-details {
+    
+  }
+
 }
   
-  
+
